<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<groupId>net.razorvine</groupId>
	<artifactId>pyrolite</artifactId>
	<version>4.20-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>pyrolite</name>
	<url>https://github.com/irmen/Pyrolite</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<compilerArgument>-Xlint:unchecked</compilerArgument>
						<compilerArgument>-Xlint:deprecation</compilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<additionalparam>-Xdoclint:none</additionalparam>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.razorvine</groupId>
			<artifactId>serpent</artifactId>
			<version>1.23</version>
		</dependency>
	</dependencies>
	<scm>
		<url>https://github.com/irmen/Pyrolite</url>
		<connection>scm:git:https://github.com/irmen/Pyrolite.git</connection>
		<developerConnection>scm:git:https://github.com/irmen/Pyrolite.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>Github</system>
		<url>https://github.com/irmen/Pyrolite/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<id>irmen</id>
			<name>Irmen de Jong</name>
			<email>irmen@razorvine.net</email>
			<url>https://github.com/irmen</url>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://raw.githubusercontent.com/irmen/Pyrolite/master/LICENSE</url>
		</license>
	</licenses>
	<description>This library allows your Java program to interface very easily with the Python world. It uses the Pyro protocol to call methods on remote objects. (See https://github.com/irmen/Pyro4). To that end, it also contains and uses a feature complete pickle protocol implementation -read and write- to exchange data with Pyro/Python.

Pyrolite only implements part of the client side Pyro library, hence its name 'lite'...  But because Pyrolite has no dependencies, it is a much lighter way to use Pyro from Java/.NET than a solution with jython+pyro or IronPython+Pyro would provide. So if you don't need Pyro's full feature set, and don't require your Java/.NET code to host Pyro objects itself, Pyrolite may be a good choice to connect java or .NET and python.

Version 4.20 changes:
Now requires Java 8 (JDK 1.8) minimum to run.
Require Serpent library 1.23.
</description>
</project>
